commit make appointment on half, confirmation to do

--- a/frontend1/tsconfig.json
+++ b/frontend1/tsconfig.json
@@ -6,6 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "downlevelIteration": true, // Enable downlevelIteration
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
