--- a/frontend1/public/manifest.json
+++ b/frontend1/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Beautycenter",
+  "name": "Beauty center application spot",
   "icons": [
     {
       "src": "favicon.ico",
