--- a/frontend1/package.json
+++ b/frontend1/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^16.18.65",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
@@ -22,6 +23,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
+    "leaflet": "^1.9.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
